--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "tiger-parse"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 anyhow = "1.0.72"
-destiny-pkg = { version = "0.9", git = "https://github.com/v4nguard/destiny-pkg.git", optional = true }
+destiny-pkg = { version = "0.9.2", optional = true }
 tracing = { version = "0.1.37", optional = true }
 glam = { version = "0.25.0" }
 tiger-parse-derive = { path = "./tiger-parse-derive" }
