--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tiger-parse"
-version = "0.1.5"
+version = "0.1.6"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -18,5 +18,7 @@ default = ["check_types"]
 
 32bit = []
 check_types = []
+# Check types in strict mode. 0xFFFFFFFF are not allowed in strict mode.
+check_types_strict = []
 destiny_pkg = ["dep:destiny-pkg"]
 check_types_debug = ["dep:tracing"]
