--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.72"
-destiny-pkg = { version = "^0.11", optional = true }
+destiny-pkg = { version = "0.12", optional = true }
 tracing = { version = "0.1.37", optional = true }
 glam = { version = ">0.27.0" }
 tiger-parse-derive = { path = "./tiger-parse-derive" }
