--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "tiger-parse"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 anyhow = "1.0"
-destiny-pkg = { version = "0.17", optional = true }
+tiger-pkg = { version = "0.18", optional = true }
 tracing = { version = "0.1", optional = true }
 glam = { version = ">0.30.0" }
 tiger-parse-derive = { path = "./tiger-parse-derive" }
@@ -20,5 +20,5 @@ default = ["check_types"]
 check_types = []
 # Check types in strict mode. 0xFFFFFFFF are not allowed in strict mode.
 check_types_strict = []
-destiny_pkg = ["dep:destiny-pkg"]
+tiger_pkg = ["dep:tiger-pkg"]
 check_types_debug = ["dep:tracing"]
