Custom error type, add field name backtrace to errors

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "tiger-parse"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0"
 tiger-pkg = { version = "0.18", optional = true }
 tracing = { version = "0.1", optional = true }
 glam = { version = ">0.30.0" }
 tiger-parse-derive = { path = "./tiger-parse-derive" }
-# thiserror = "1.0.50"
+thiserror = "1"
+disqualified = "1.0.0"
 
 [features]
 default = ["check_types"]
