--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ glam = { version = ">0.30.0" }
 tiger-parse-derive = { path = "./tiger-parse-derive" }
 thiserror = "1"
 disqualified = "1.0.0"
+paste = "1.0.15"
 
 [features]
 default = ["check_types"]
