--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,6 @@ tiger-parse-derive = { path = "./tiger-parse-derive" }
 linkme = { version = "0.3", optional = true }
 tiger-pkg = { version = "0.18", optional = true }
 tracing = { version = "0.1", optional = true }
-bitflags = { version = "2.9.4", optional = true }
 
 [features]
 default = ["check_types"]
@@ -26,7 +25,7 @@ check_types_strict = []
 tiger_pkg = ["dep:tiger-pkg"]
 check_types_debug = ["dep:tracing"]
 reflect = ["dep:linkme", "tiger-parse-derive/reflect"]
-bitflags = ["dep:bitflags"]
 
 [dev-dependencies]
+bitflags = { version = "2.9.4" }
 chroma-dbg = "0.1.1"
